spacing between customer picture and rating fixed
star color and line height also improved

--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ a {
   border: 1px solid #c9c9c9;
   background-color: white;
   border-radius: 5px;
-  display: flex column;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
   padding: 10px;
 }
 
@@ -60,7 +60,8 @@ a {
 
 #login-form {
   width: 250px;
-  display: flex column;
+  display: flex;
+  flex-direction: column;
 }
 
 #signup-form div {
@@ -71,14 +72,20 @@ a {
   display: flex;
 }
 
+#signup-form div {
+  display: flex;
+  flex-direction: column;
+}
+
 #signup-form div:first-child {
   margin-right: 10px;
 }
 
-#switch-form-link {
-  display: inline-block;
-  line-height: 14px;
-  margin-top: 36px;
+#login-signup-buttons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
 #switch-form-link:hover {
@@ -101,11 +108,6 @@ a {
 
 .button:hover {
   background-color: #c9c9c9;
-}
-
-#submit-form-button {
-  margin-top: 10px;
-  float: right;
 }
 
 #error {
@@ -152,6 +154,7 @@ header > a {
 body {
   height: 100vh;
   background-color: #f4f4f4;
+  background-image: url("images/");
 }
 
 #content {
@@ -208,7 +211,7 @@ main > * {
 
 #notes-header {
   height: 40px;
-  background-color: #d9d9d9;
+  background-color: #ffd296;
   text-align: center;
   line-height: 40px;
   position: sticky;
@@ -222,7 +225,7 @@ main > * {
   position: sticky;
   top: 100px;
   border-top: 0;
-  border-color: #d9d9d9;
+  border-color: #ffd296;
   border-radius: 0px 0px 5px 5px;
 }
 
@@ -290,6 +293,7 @@ main > * {
   font-size: 22px;
   margin: 0px 2px;
   transition: color 0.2s;
+  color: #c9c9c9;
 }
 
 #rating > label:last-of-type {
@@ -303,7 +307,7 @@ main > * {
 #rating > input:hover ~ label,
 #rating > input:checked ~ label,
 .star {
-  color: rgb(255, 155, 0);
+  color: rgb(255, 200, 20);
 }
 
 .hidden-item {
@@ -431,6 +435,7 @@ main > * {
 }
 
 #list-table td {
+  line-height: 40px;
   padding-left: 20px;
 }
 
@@ -452,8 +457,9 @@ footer {
 
 #customer-info-div {
   position: relative;
-  padding: 20px 40px;
+  padding: 30px 0px;
   display: flex;
+  flex-direction: row;
 }
 
 #edit-button {
@@ -466,25 +472,27 @@ footer {
 #customer-img-rate-div {
   margin-right: 20px;
   height: 100%;
-  display: flex column;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #customer-image {
   height: 120px;
   width: 120px;
   border-radius: 5px;
-  background-image: url("images/blue-pokemon-pp.jpg");
+  background-image: url("images/steven.jpg");
   background-size: cover;
 }
 
 #customer-rating {
   text-align: center;
-  font-size: 16px;
+  line-height: 24px;
+  font-size: 24px;
 }
 
-
 #customer-details tr {
-  height: 22px;
+  height: 20px;
   cursor: default;
 }
 
@@ -493,7 +501,7 @@ footer {
 }
 
 #customer-details tr td:nth-of-type(2) {
-  padding-left: 20px;
+  padding-left: 10px;
 }
 
 #customer-header {
